// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classifiers can specialize multiple other classifiers: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Classifier",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "A",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Classifier",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "B",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Classifier",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "C",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [
            {
              "$type": "Subclassification",
              "annotations": [],
              "chains": [],
              "elements": [],
              "prefixes": [],
              "reference": {
                "$type": "ClassifierReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Classifier",
                      "aliases": [],
                      "annotatingMembers": [],
                      "declaredName": "A",
                      "filters": [],
                      "imports": [],
                      "isSufficient": false,
                      "members": [],
                      "namespaceMembers": [],
                      "prefixes": [],
                      "relationshipMembers": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "Subclassification",
              "annotations": [],
              "chains": [],
              "elements": [],
              "prefixes": [],
              "reference": {
                "$type": "ClassifierReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Classifier",
                      "aliases": [],
                      "annotatingMembers": [],
                      "declaredName": "B",
                      "filters": [],
                      "imports": [],
                      "isSufficient": false,
                      "members": [],
                      "namespaceMembers": [],
                      "prefixes": [],
                      "relationshipMembers": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`specializations can be parsed: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Classifier",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "A",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Classifier",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "B",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Subclassification",
          "annotations": [],
          "chains": [],
          "declaredName": "Super",
          "elements": [],
          "prefixes": [],
          "reference": {
            "$type": "ClassifierReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Classifier",
                  "aliases": [],
                  "annotatingMembers": [],
                  "declaredName": "B",
                  "filters": [],
                  "imports": [],
                  "isSufficient": false,
                  "members": [],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "source": {
            "$type": "ClassifierReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Classifier",
                  "aliases": [],
                  "annotatingMembers": [],
                  "declaredName": "A",
                  "filters": [],
                  "imports": [],
                  "isSufficient": false,
                  "members": [],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Subclassification",
          "annotations": [
            {
              "$type": "Annotation",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Documentation",
                "about": [],
                "body": "/* unnamed */",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "chains": [],
          "elements": [],
          "prefixes": [],
          "reference": {
            "$type": "ClassifierReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Classifier",
                  "aliases": [],
                  "annotatingMembers": [],
                  "declaredName": "A",
                  "filters": [],
                  "imports": [],
                  "isSufficient": false,
                  "members": [],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "source": {
            "$type": "ClassifierReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Classifier",
                  "aliases": [],
                  "annotatingMembers": [],
                  "declaredName": "B",
                  "filters": [],
                  "imports": [],
                  "isSufficient": false,
                  "members": [],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
        "elements": [],
        "prefixes": [],
      },
    ],
  },
}
`;
